# mopidy-listenbrainz

./: .gitignore  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
mopidy_listenbrainz/: __init__.py  backend.py  ext.conf  frontend.py  listenbrainz.py  playlists.py
tests/: test_extension.py  test_frontend.py
