[metadata]
name = Mopidy-Listenbrainz
version = 0.3.0
url = https://github.com/suaviloquence/mopidy-listenbrainz
author = suaviloquence
author_email = m@mcarr.one
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for recording played tracks as listens to Listenbrainz
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.13
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.13
install_requires =
    Mopidy >= 4.0.0
    Pykka >= 4.4.2
    musicbrainzngs >= 0.7.1


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
test =
    pytest
    pytest-cov


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    listenbrainz = mopidy_listenbrainz:Extension


[flake8]
application-import-names = mopidy_listenbrainz, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
